--- a/index.html
+++ b/index.html
@@ -19,22 +19,20 @@
   <body>
 
 <div class="jumbotron jumbotron-fluid bg-primary" style="background-color: #3EECAC;
-background-image: linear-gradient(0deg, #3EECAC 0%, #EE74E1 50%, #fcba03 100%)" class="border-8">
-
-<div class="container">
-<h1 class="display-4 text-center" style="font-family: 'Pacifico', cursive; font-weight: 500; color: black;">Search for awesome GIFs!</h1>
-</div>
+background-image: linear-gradient(0deg, #3EECAC 0%, #EE74E1 50%, #fcba03 100%)">
+  <div class="container">
+    <div class="row"> <!-- delete? -->
+  <img src="images/Rocket-PNG-24.png" class="column">
+  <h1 class="display-4 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: black;">Search for awesome GIFs!</h1>
+  </div>
+  </div>
 </div>
 
 <div class="grid grid-cols-12 gap-1">
-      <input type='text' id="search-field" class="col-span-12 md:col-start-4 md:col-end-6"></input>
-    <button id="search-button" class="rounded-med col-span-12 md:col-start-6 md:col-end-8">Search</button>
+      <input type='text' id="search-field" class="col-span-8 offset-4 md:col-start-4 md:col-end-6"></input>
+    <button id="search-button" class="rounded-med col-span-8 offset-4 md:col-start-6 md:col-end-8">Search</button>
 </div>    
 
-<!-- <div class="grid grid-cols-12 gap-1">
-  <input type='text' id="search-field" class="med:col-start-4 med:col-end-6 sm:col-span-12"></input>
-<button id="search-button" class="rounded-med sm:col-span-12">Search</button>
-</div>     -->
 
 <br>
 
