--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 <div class="jumbotron jumbotron-fluid bg-primary" style="background-color: #3EECAC;
 background-image: linear-gradient(0deg, #3EECAC 0%, #EE74E1 50%, #fcba03 100%)">
   <div class="container">
-    <div class="row"> <!-- delete? -->
-  <img src="images/Rocket-PNG-24.png" class="column">
-  <h1 class="display-4 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: black;">Search for awesome GIFs!</h1>
-  </div>
+    <div class="row">
+      <img src="images/Rocket-PNG-24.png" class="column">
+      <h1 class="display-3 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: black;">Search for awesome GIFs!</h1>
+    </div>
   </div>
 </div>
 
 
 <div class="search grid grid-cols-12" style="margin-bottom: 10px">
     <!-- <input type='text' id="search-field" class="col-span-8 offset-3 md:col-start-4 md:col-end-6"></input> -->
-    <input type='text' id="search-field" class="col-span-12 md:col-span-3"></input>
+    <input type='text' id="search-field" class="col-span-12 md:col-start-2 md:col-end-5"></input>
     <button id="search-button" class="col-span-12 md:col-span-2">Search</button>
 </div>    
 
