--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <body>
 
    
-<div class="jumbotron jumbotron-fluid bg-primary" style="background-color: #3EECAC;
-background-image: linear-gradient(0deg, #3EECAC 0%, #EE74E1 50%, #fcba03 100%)">
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
     <div class="row">
       <img src="images/Rocket-PNG-24.png" class="column">
@@ -32,7 +31,7 @@ background-image: linear-gradient(0deg, #3EECAC 0%, #EE74E1 50%, #fcba03 100%)">
 
 <div class="search grid grid-cols-12" style="margin-bottom: 10px">
     <!-- <input type='text' id="search-field" class="col-span-8 offset-3 md:col-start-4 md:col-end-6"></input> -->
-    <input type='text' id="search-field" class="col-span-12 md:col-start-2 md:col-end-5"></input>
+    <input type='text' id="search-field" placeholder="crazy cat lady!" class="col-span-12 md:col-start-2 md:col-end-5"></input>
     <button id="search-button" class="col-span-12 md:col-span-2">Search</button>
 </div>    
 
