--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="row">
       <img src="images/Rocket-PNG-24.png" class="column">
-      <h1 class="display-3 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: black;">Search for awesome GIFs!</h1>
+      <h1 class="display-3 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: rgb(77, 247, 238);">Search for awesome GIFs!</h1>
     </div>
   </div>
 </div>
