--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-        
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-        <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
-        <script src="script.js"></script>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>    
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+      <script src="script.js"></script>
+      <link href="style.css" rel="stylesheet" type="text/css" />
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   </head>
-  <body>
 
-   
+<body>  
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <div class="row">
@@ -26,22 +21,15 @@
       <h1 class="display-3 text-center column" style="font-family: 'Pacifico', cursive; font-weight: 500; color: rgb(77, 247, 238);">Search for awesome GIFs!</h1>
     </div>
   </div>
+
+  <div class="search grid grid-cols-12" style="margin-bottom: 10px">
+    <input type='text' id="search-field" placeholder=" Search here" class="px-2 col-span-12 md:col-start-4 md:col-end-7"></input>
+    <button id="search-button" class="col-span-12 md:col-span-3">Search</button>
+  </div>    
+
 </div>
 
-
-<div class="search grid grid-cols-12" style="margin-bottom: 10px">
-    <!-- <input type='text' id="search-field" class="col-span-8 offset-3 md:col-start-4 md:col-end-6"></input> -->
-    <input type='text' id="search-field" placeholder=" Search here" class="col-span-12 md:col-start-2 md:col-end-5"></input>
-    <button id="search-button" class="col-span-12 md:col-span-2">Search</button>
-</div>    
-
-
-<hr style="background-color:rgb(18, 25, 117)">
-
-<br>
-
-    <div id="search-results"></div>
-
-  </body>
+<div id="search-results"></div>
+</body>
 </html>
 
